[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/plastic_bag_outlined.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Actors/Obstacles/obstacle.gd" type="Script" id=2]
[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "obstacle_move"
length = 1.2
loop = true
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 30.001
height = 24.4257

[sub_resource type="CircleShape2D" id=3]
radius = 7.44019

[node name="PlasticBag" type="KinematicBody2D"]
rotation = 0.143277
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
type = "bag"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.95398, -24.3908 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 1 )
vframes = 2
hframes = 3
frame = 4

[node name="BagAnimationPlayer" type="AnimationPlayer" parent="."]
anims/obstacle_move = SubResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 6.93563, 10.985 )
rotation = 1.19206
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.725098, 15.5414 )
shape = SubResource( 3 )

[editable path="Hitbox"]
