[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/bottle.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Actors/Obstacles/obstacle.gd" type="Script" id=2]
[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "rotate_bottle"
length = 6.4
loop = true
step = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.6, 2.4, 3.2, 4, 4.8, 5.6, 6.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0, 90.0, 135.0, 180.0, 225.0, 270.0, 315.0, 360.0 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 10.8332
height = 42.6866

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.03607
height = 0.505381

[node name="PlasticBottle" type="KinematicBody2D"]
modulate = Color( 1, 0.9, 0.9, 1 )
collision_layer = 0
collision_mask = 2147483648
script = ExtResource( 2 )
type = "bottle"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -9.51097, -4.97725 )
scale = Vector2( 2.04722, 1.93579 )
texture = ExtResource( 1 )

[node name="BottleAnimationPlayer" type="AnimationPlayer" parent="."]
anims/rotate_bottle = SubResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -2.06631, -5 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.46169, -4.01971 )
shape = SubResource( 3 )

[editable path="Hitbox"]
